tests/positive/pr112_discrete_case.safe
-- Test: pr112_discrete_case
-- Description: Boolean and integer case statements plus direct string returns.
-- Expected: ACCEPT

package pR112_Discrete_Case

   function flag_Value (flag : in boolean) returns integer

      case flag
         when True
            return 1;

         when others
            return 0;




   function opcode_Name (opcode : in integer) returns string

      case opcode
         when -1
            return "reset";

         when 0
            return "nop";

         when 1
            return "load";

         when others
            return "unknown";





