tests/negative/neg_pr115_missing_case_arm_semicolon.safe
package neg_PR115_Missing_Case_Arm_Semicolon

   type switch is range 0 to 1;

   function broken (input : switch) returns boolean

      case input
         when 0
            return False return True;

         when others
            return True;




